cmake_minimum_required(VERSION 2.8.3)
project(leetcode)
set(CMAKE_BUILD_TYPE "Debug")
#set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -march=native -O3 -pthread")

macro(SUBDIRLIST result curdir)
    file(GLOB children RELATIVE ${curdir} ${curdir}/*)
    set(dirlist "")
    foreach(child ${children})
        if(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${curdir}/${child})
        endif()
    endforeach()
    set(${result} ${dirlist})
endmacro()

SUBDIRLIST(dirs ${CMAKE_CURRENT_SOURCE_DIR})

foreach(CURRENT_FOLDER ${dirs})
    if(EXISTS "${CURRENT_FOLDER}/CMakeLists.txt")
        add_subdirectory(${CURRENT_FOLDER})
        message(STATUS "${CURRENT_FOLDER}/CMakeLists.txt")
    endif(EXISTS "${CURRENT_FOLDER}/CMakeLists.txt")
endforeach()
